trunk/Andromeda/test/test-src/com/sc2mod/andromeda/test/junit/unittests/types/forbiddenExtensionCast.a
extension X extends int{

}


static{
	X x = (!! X) 3;
	int b = x; 	//works
	X y = 2; 	//error
}
